Small code refactors